--- a/scss/style.scss
+++ b/scss/style.scss
@@ -86,6 +86,12 @@ body {
     line-height: 80px;
     color: $colorTextQuestImportant;
     text-align: center;
+
+    &--admin {
+        width: 120px;
+    
+        &:disabled {  border-color: red; }
+    }
 }
 .achieves {
     width: 184px;
@@ -414,7 +420,7 @@ body {
 
             &--animate { transform: translateX(0); }
             &:first-child { top: 10%; left: 85%; }
-            &:last-child { top: -60%; left: 60%; }
+            &:last-child { top: -60%; left: 70%; }
         } 
     }
     &[data-score='16'] {
