--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,18 +15,6 @@ body > i{
     z-index: -1;
     animation: stars linear infinite;
 }
-@keyframes stars {
-    0% { 
-        opacity: 0; 
-        transform: translateY(0);
-    }
-    10% { opacity: 1; }
-    90% { opacity: 1; }
-    100% {
-        opacity: 0; 
-        transform: translateY(-100px); 
-    }
-}
 .menu {
     position: fixed;
     left: 0;
@@ -161,7 +149,55 @@ body > i{
     height: 100%;
     background-image: url(../images/ships/start-ship-1.png);
     background-size: cover;
+    position: relative;
     animation: planeMove 3s linear infinite;
+    
+    &__fire {
+        position: absolute;
+        height: 30px;
+        left: 50%;
+        transform: translateX(-50%) scale(0);
+        transform-origin: top;
+        transition-duration: 0.3s;
+
+        &--type-0 {
+            bottom: -20px;
+            width: 5px;
+            background-image: linear-gradient(#00d0ff, transparent);
+        }
+        &--type-1 {
+            bottom: -15px;
+            width: 22px;
+                    
+            &::before,
+            &::after {
+                content: "";
+                position: absolute;
+                top: 0;
+                width: 5px;
+                height: 100%;
+                background-image: linear-gradient(#a5f88b, transparent);
+            }
+            &::before { left: 0; }
+            &::after { right: 0; }
+        }   
+        &--type-2 {
+            bottom: 0;
+            width: 6px;
+            background-image: linear-gradient(#e7e292, transparent);
+        }
+        &--type-3 {
+            bottom: -5px;
+            width: 16px;
+            background-image: linear-gradient(#9ee8fa, transparent);
+        }
+        &--type-4 {
+            bottom: -4px;
+            width: 5px;
+            background-image: linear-gradient(#8ed6f1, transparent);
+        }
+        &--animate { transform: translateX(-50%) scale(1); }
+    }
 }
 .space-ship-1,
 .space-ship-2,
@@ -176,27 +212,38 @@ body > i{
 }
 .space-ship-1 {
     background-image: url(../images/ships/ship01.png);
-    animation: spaceShipMove 10s linear infinite;
+    
+    &--animate {
+        animation: spaceShipMove 10s linear infinite;
+    }
 }
 .space-ship-2 {
     background-image: url(../images/ships/ship04.png);
     transform: scaleX(-1);
-    animation: spaceShipMoveReverse 10s linear infinite;
+
+    &--animate {
+        animation: spaceShipMoveReverse 10s linear infinite;
+    }
 }
 .space-ship-3 {
     background-image: url(../images/ships/ship05.png);
-    animation: spaceShipMove 10s linear infinite;
+
+    &--animate {
+        animation: spaceShipMove 10s linear infinite;
+    }
 }
 .space-ship-4 {
     background-image: url(../images/ships/ship06.png);
     transform: scaleX(-1);
-    animation: spaceShipMoveReverse 10s linear infinite;
-
+    
+    &--animate {
+        animation: spaceShipMoveReverse 10s linear infinite;
+    }
     &::before {
         display: block;
         content: "";
         width: 100%;
-        height: 100%;
+        height: 110%;
         background-image: url(../images/ships/ship06a.png);
         background-size: cover;
         position: relative;
@@ -237,11 +284,11 @@ body > i{
     background-position: center;
     box-shadow: 0 100px 70px -25px #000 inset, 0 -100px 70px -25px #000 inset;
 
-    &:first-child { background-image: url(../images/bg/galaxy-finish.jpg); }  
-    &:nth-last-child(6) { background-image: url(../images/bg/galaxy05.jpg); }  
-    &:nth-last-child(5) { background-image: url(../images/bg/galaxy04.jpg); }  
-    &:nth-last-child(4) { background-image: url(../images/bg/galaxy03.jpg); }  
-    &:nth-last-child(3) { background-image: url(../images/bg/galaxy02.jpg); }  
+    &--bg-finish { background-image: url(../images/bg/galaxy-finish.jpg); }  
+    &--bg-5 { background-image: url(../images/bg/galaxy05.jpg); }  
+    &--bg-4 { background-image: url(../images/bg/galaxy04.jpg); }  
+    &--bg-3 { background-image: url(../images/bg/galaxy03.jpg); }  
+    &--bg-2 { background-image: url(../images/bg/galaxy02.jpg); }  
     &:nth-last-child(2) { background-image: url(../images/bg/galaxy01.jpg); }  
     &:last-child {
         background-image: url(../images/bg/galaxy-start.jpg);
@@ -790,7 +837,10 @@ body > i{
     border-radius: 50%;
     background-size: 400px;
     box-shadow: inset 16px 0 40px 3px rgba(0,0,0,0.9), inset -3px 0 5px 2px rgba(255,255,255,0.16);
-    animation: planetMove 10s linear infinite;
+    
+    &--animate {
+        animation: planetMove 10s linear infinite;
+    }
 }
 .modal {
     position: fixed;
@@ -1409,4 +1459,17 @@ body > i{
 @keyframes finishMove {
     0% { right: 0; transform: translate(-50%, -50%) rotate(0) scale(1); }
     100% { right: 65%; transform: translate(-50%, -30%) rotate(0) scale(0); }
+}
+/* body bg stars*/
+@keyframes stars {
+    0% { 
+        opacity: 0; 
+        transform: translateY(0);
+    }
+    10% { opacity: 1; }
+    90% { opacity: 1; }
+    100% {
+        opacity: 0; 
+        transform: translateY(-100px); 
+    }
 }
